packages/typ/tests/fixtures/diagnostics/0662_fcm_pack_tuple_type_mismatch_01.ml.expected
File "0662_fcm_pack_tuple_type_mismatch_01.ml", line 1:
Warning 24 [bad-module-name]: bad source file name: 0662_fcm_pack_tuple_type_mismatch_01 is not a valid module name.

File "0662_fcm_pack_tuple_type_mismatch_01.ml", line 11, characters 16-23:
11 | let _ = (module M_alpha : Cell_alpha with type t = bool * bool)
                     ^^^^^^^
Error: This expression has type (module Cell_alpha with type t = bool * bool)
       but an expression was expected of type
         (module Cell_alpha with type t = M_alpha.t)
       Type bool * bool is not compatible with type M_alpha.t = int * int
       Type bool is not compatible with type int
